# seo-article-generator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: __init__.py  routes.py  schemas.py
app/models/: __init__.py  article.py  job.py  serp.py
app/persistence/: __init__.py  job_store.py
app/pipeline/: __init__.py  orchestrator.py
app/pipeline/steps/: __init__.py  article_generation.py  outline_generation.py  seo_validation.py  serp_analysis.py  theme_extraction.py
app/providers/llm/: __init__.py  base.py  groq.py  mock.py
app/providers/serp/: __init__.py  base.py  mock.py  serper.py
data/fixtures/: sample_serp.json
tests/: __init__.py  test_api.py  test_e2e.py  test_job_persistence.py  test_models.py  test_seo_validator.py
